feat(service): Implementa as services para agendamento, serviços, periodos de bloqueio e horarios disponíveis, alem de adicionar um validador de horários.