@@ -1,10 +1,7 @@
 package br.com.core.barbershop.service;
 
-
-
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -12,58 +9,54 @@ import org.springframework.transaction.annotation.Transactional;
 import br.com.core.barbershop.domain.BarberService;
 import br.com.core.barbershop.dto.ServiceRequestDto;
 import br.com.core.barbershop.dto.ServiceResponseDto;
+import br.com.core.barbershop.exception.DuplicateResourceException;
+import br.com.core.barbershop.exception.ResourceNotFoundException;
 import br.com.core.barbershop.repository.BarberServiceRepository;
-import jakarta.persistence.EntityNotFoundException;
-
 
 @Service
 public class BarberServiceService {
 
     private final BarberServiceRepository serviceRepository;
 
-    public BarberServiceService(BarberServiceRepository serviceRepository){
+    public BarberServiceService(BarberServiceRepository serviceRepository) {
         this.serviceRepository = serviceRepository;
     }
 
-
     @Transactional
-    public ServiceResponseDto create(ServiceRequestDto req){
-
-        if(serviceRepository.findByServiceName(req.serviceName()).isPresent()){
-            throw new RuntimeException("Service name already registred");
+    public ServiceResponseDto create(ServiceRequestDto req) {
+        if (serviceRepository.existsByServiceName(req.serviceName())) {
+            throw new DuplicateResourceException("Service '" + req.serviceName() + "' already exists");
         }
 
-        BarberService newService = new BarberService();
-        newService.setServiceName(req.serviceName());
-        newService.setDescription(req.description());
-        newService.setDurationMin(req.durationMin());
-        newService.setPrice(req.price());
+        BarberService newService = BarberService.builder()
+            .serviceName(req.serviceName())
+            .description(req.description())
+            .price(req.price())
+            .durationMin(req.durationMin())
+            .build();
 
         BarberService savedService = serviceRepository.save(newService);
-
         return toResponse(savedService);
     }
 
-    public List<ServiceResponseDto> findAll(){
-        return serviceRepository.findAll().stream()
-        .map(this::toResponse)
-        .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<ServiceResponseDto> findAllActive() {
+        return serviceRepository.findAllByActiveTrue().stream()
+            .map(this::toResponse)
+            .toList();
     }
 
-    public ServiceResponseDto findById(UUID id){
-
+    @Transactional(readOnly = true)
+    public ServiceResponseDto findById(UUID id) {
         BarberService service = serviceRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException("Service not found"));
-
+            .orElseThrow(() -> new ResourceNotFoundException("Service not found with ID: " + id));
         return toResponse(service);
     }
 
-
     @Transactional
-    public ServiceResponseDto update(UUID id, ServiceRequestDto req){
-
+    public ServiceResponseDto update(UUID id, ServiceRequestDto req) {
         BarberService service = serviceRepository.findById(id)
-        .orElseThrow(()-> new EntityNotFoundException("Service id not found"));
+            .orElseThrow(() -> new ResourceNotFoundException("Service not found with ID: " + id));
 
         service.setServiceName(req.serviceName());
         service.setDescription(req.description());
@@ -71,33 +64,25 @@ public class BarberServiceService {
         service.setDurationMin(req.durationMin());
 
         BarberService updatedService = serviceRepository.save(service);
-
         return toResponse(updatedService);
     }
 
+    @Transactional
+    public void deactivate(UUID id) {
+        BarberService service = serviceRepository.findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Service not found with ID: " + id));
 
-
-    public void remove(UUID id){
-
-        if(!serviceRepository.existsById(id)){
-            throw new EntityNotFoundException("Entity not found");
-        }
-
-        serviceRepository.deleteById(id);
+        service.setActive(false);
+        serviceRepository.save(service);
     }
 
-
-
-    private ServiceResponseDto toResponse(BarberService req){
+    private ServiceResponseDto toResponse(BarberService service) {
         return new ServiceResponseDto(
-            req.getId(),
-            req.getServiceName(),
-            req.getDescription(),
-            req.getPrice(),
-            req.getDurationMin()
+            service.getId(),
+            service.getServiceName(),
+            service.getDescription(),
+            service.getPrice(),
+            service.getDurationMin()
         );
     }
-
-
 }
-
